  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

2007-06-17  Andreas Köhler  <andi5.py@gmx.net>

	* m4/os.m4: Replace all target tests by ones for the host system
	type.  Host and target would only differ if we were about to build
	a cross-compiler, but using host is more precise nonetheless.

	* configure.ac: Use AC_CANONICAL_BUILD and _HOST, but not _TARGET

===========================================================================
MARK: released gwenhywfar-2.6.0 (2007/06/09, r1225)
===========================================================================

2007-05-11  Christian Stimming  <stimming@tuhh.de>

	* src/base/logger.c: Fix LoggerType_Function. By Hendrik Weimer.


2007/03/12: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- src/os/posix/process.c: now use GWEN_BUFFER to collect arguments for
  the process to start instead of fixed buffers


2007-03-10  Christian Stimming  <stimming@tuhh.de>

	* src/base/list2.h: Add macros for functions IsEmpty, FindIter,
	Contains to make available list functions more complete.


2007-03-09  Christian Stimming  <stimming@tuhh.de>

	* src/base/list.h: Add functions IsEmpty, FindIter, Contains to
	make available list functions more complete.


===========================================================================
MARK: released gwenhywfar-2.5.4 (2007/02/16, r1165)
===========================================================================


2007-02-16   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfarapi.h: Add common macros for DIR_SEPARATOR and
	SEARCHPATH_SEPARATOR, both as character and string. Naming is
	similar to glib convention.


2007-02-13   Christian Stimming <stimming@tuhh.de>
